fixed bottom container alignment

--- a/css/codeup-design-project.css
+++ b/css/codeup-design-project.css
@@ -139,3 +139,15 @@ nav .nav-item {
 .col-12 {
     margin: 0 0 3em 0
 }
+.m-col-two .col-12 {
+    margin-bottom: .5em;
+    width: 100%;
+}
+.m-col-two .col-12 h5 {
+}
+h1 {
+    font-size: 64px;
+}
+h2 {
+    font-size: 48px;
+}
